main-flask/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-flask
  namespace: my-app
  labels:
    app: main-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-flask
  template:
    metadata:
      labels:
        app: main-flask
    spec:
      containers:
      - name: main-flask
        image: jonnehh/main-flask:latest 
        ports:
        - containerPort: 888
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 888
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 888
          initialDelaySeconds: 5
          periodSeconds: 5
