main-flask/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-flask-service
  namespace: my-app
spec:
  selector:
    app: main-flask
  ports:
    - protocol: TCP
      port: 80       # 服务暴露的端口
      targetPort: 888  # 容器内部的端口
  type: LoadBalancer  # 设置为 LoadBalancer 类型
